# dos-like-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  LICENSE.md  README.md  build.rs
.github/workflows/: ci.yml
dos-like-sys/: Cargo.toml  LICENSE.md  README.md  build.rs  gen_bindings.sh
dos-like-sys/src/: bindings.rs  lib.rs
examples/: keyboard.rs  plasma.rs  rotozoom.rs  sound.rs
src/: input.rs  lib.rs  music.rs  sound.rs  video.rs
