[package]
name = "dos-like"
version = "0.2.3"
description = "Framework for writing DOS-like applications"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
keywords = ["dos", "vga", "opl", "ms-dos"]
categories = ["external-ffi-bindings", "game-development", "graphics"]
repository = "https://github.com/Enet4/dos-like-rs"
readme = "README.md"
license-file = "LICENSE.md"
exclude = ["assets/*", "screenshot.png"]
edition = "2021"

[dependencies]
dos-like-sys = { path = "dos-like-sys/", version = "0.2.2" }
lazy_static = "1.4.0"
smallvec = "1.8.0"

[features]

default = []
disable-screen-frame = ["dos-like-sys/disable-screen-frame"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "thin"
strip = "debuginfo"
