[package]
name = "dos-like-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2-sys = "0.35.2"

[build-dependencies]
cc = "1.0.73"

[build-dependencies.pkg-config]
version = "^0.3"
optional = true

[build-dependencies.vcpkg]
version = "^0.2.12"
optional = true

[features]

default = []
use-pkgconfig = ["pkg-config"]
use-vcpkg = ["vcpkg"]
disable-screen-frame = []

