[package]
name = "dos-like-sys"
version = "0.1.0"
description = "Low-level bindings to dos-like"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
repository = "https://github.com/Enet4/dos-like-rs"
keywords = ["dos", "vga", "opl", "ms-dos"]
categories = ["external-ffi-bindings", "game-development", "graphics"]
readme = "README.md"
license-file = "LICENSE.md"
edition = "2021"
exclude = [
    "dos-like/dos-like.jpg",
    "dos-like/build_all.bat",
    "dos-like/build_all_linux.sh",
    "dos-like/build_all_macos.sh",
    "dos-like/build_all_wasm.bat",
    "dos-like/files",
    "dos-like/tcc",
]

[dependencies]

[build-dependencies]
cc = "1.0.73"

[build-dependencies.pkg-config]
version = "^0.3"
optional = true

[build-dependencies.vcpkg]
version = "^0.2.12"
optional = true

[features]

default = []
use-pkgconfig = ["pkg-config"]
use-vcpkg = ["vcpkg"]
disable-screen-frame = []

